--- a/src/components/stylesheets/MainBody.css
+++ b/src/components/stylesheets/MainBody.css
@@ -1,15 +1,12 @@
-
 main {
     background-color: var(--background-color);
     font-size: 1.2rem;
-    flex-grow: 1;
+    flex-grow: 1; /* Allow the main element to grow */
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 2fr 1fr;
     gap: 10px; /* Optional: Add spacing between grid items */
-    height: 100%; /* Ensure it takes up available space */
-    width: 100%;
-    padding: 10px; /* Optional: Add padding */
+    padding: 10px;
 }
 
 main > article {
